# web_scraper

./: .gitignore  README.md  pyproject.toml
scraping/: 15min_receptai.ipynb  paskaita.ipynb  scraper.py
scraping/model/: __init__.py
scraping/models/: recipe.py
scraping/scrapers/: __init__.py  base.py  receptai15min.py
scraping/temp/: 15min.csv  15min_receptai.ipynb  np.ipynb
